@@ -1,0 +1,8 @@
+PROJECT (Examples)
+
+# replace "..." with the path to your YARP binaries if needed
+#SET(YARP_DIR "${CMAKE_SOURCE_DIR}/../.." CACHE LOCATION "where is yarp?")
+
+FIND_PACKAGE(YARP)
+
+ADD_EXECUTABLE(carrier_test main.cpp)
